--- a/SalesWebMvc/Views/Shared/Error.cshtml
+++ b/SalesWebMvc/Views/Shared/Error.cshtml
@@ -1,10 +1,10 @@
-﻿@model ErrorViewModel
+﻿@model SalesWebMvc.Models.ViewModels.ErrorViewModel
 @{
     ViewData["Title"] = "Error";
 }
 
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
+<h1 class="text-danger">@ViewData["Title"].</h1>
+<h2 class="text-danger">@Model.Message</h2>
 
 @if (Model.ShowRequestId)
 {
