--- a/SalesWebMvc/Views/Sellers/Create.cshtml
+++ b/SalesWebMvc/Views/Sellers/Create.cshtml
@@ -26,7 +26,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Seller.BaseSalary" class="control-label"></label>
-                <input asp-for="Seller.BaseSalary" class="form-control" />
+                <input asp-for="Seller.BaseSalary" asp-format="{0:dd/MM/yyyy}" class="form-control" />
             </div>
             <div class="form-group">
                 <label asp-for="Seller.DepartmentId">Departaments</label>
